Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4527

lfs option deprecation uses LUSTRE_VERSION which isn't defined anywhere

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.6.0
    • 3
    • 12383

        File                      Function               Line
      0 lustre/utils/lctl.c       <global>                138 #if LUSTRE_VERSION >= OBD_OCD_VERSION(3,0,53,0)
      1 lustre/utils/lfs.c        <global>                 71 #ifdef LUSTRE_VERSION
      2 lustre/utils/lfs.c        <global>                 72 #error LUSTRE_VERSION
      3 lustre/utils/lfs.c        lfs_setstripe           579 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      4 lustre/utils/lfs.c        lfs_setstripe           590 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      5 lustre/utils/lfs.c        lfs_setstripe           600 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      6 lustre/utils/lfs.c        lfs_setstripe           609 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      7 lustre/utils/lfs.c        lfs_setstripe           629 #if LUSTRE_VERSION < OBD_OCD_VERSION(2,4,50,0)
      8 lustre/utils/lfs.c        lfs_setstripe           656 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      9 lustre/utils/lfs.c        lfs_setstripe           658 #elif LUSTRE_VERSION >= OBD_OCD_VERSION(2,6,50,0)
      a lustre/utils/lfs.c        lfs_setstripe           670 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,4,50,0)
      b lustre/utils/lfs.c        lfs_setstripe           680 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      c lustre/utils/lfs.c        lfs_setstripe           682 #elif LUSTRE_VERSION >= OBD_OCD_VERSION(2,6,50,0)
      d lustre/utils/lfs.c        lfs_setstripe           690 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      e lustre/utils/lfs.c        lfs_setstripe           692 #elif LUSTRE_VERSION >= OBD_OCD_VERSION(2,6,50,0)
      f lustre/utils/lfs.c        lfs_getstripe_internal 1240 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      g lustre/utils/lfs.c        lfs_getstripe_internal 1252 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      h lustre/utils/lfs.c        lfs_getstripe_internal 1265 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      i lustre/utils/lfs.c        lfs_getstripe_internal 1279 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      j lustre/utils/lfs.c        lfs_getstripe_internal 1321 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      k lustre/utils/lfs.c        lfs_getstripe_internal 1323 #elif LUSTRE_VERSION >= OBD_OCD_VERSION(2,6,50,0)
      l lustre/utils/lfs.c        lfs_getstripe_internal 1334 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      m lustre/utils/lfs.c        lfs_getstripe_internal 1336 #elif LUSTRE_VERSION >= OBD_OCD_VERSION(2,6,50,0)
      n lustre/utils/lfs.c        lfs_getstripe_internal 1347 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,4,50,0)
      o lustre/utils/lfs.c        lfs_getstripe_internal 1357 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,9,50,0)
      p lustre/utils/lfs.c        lfs_getstripe_internal 1359 #elif LUSTRE_VERSION >= OBD_OCD_VERSION(2,6,50,0)
      q lustre/utils/lustre_cfg.c jt_lcfg_mgsparam        556 #if LUSTRE_VERSION >= OBD_OCD_VERSION(2,7,53,0)
      

      LUSTRE_VERSION_CODE was meant.

            adilger Andreas Dilger
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: